syntax = "proto3";

package master;
option go_package="./masterpb";

// Area
message Area {
    int32 id = 1;
    string name = 2;
}
message GetAreasRequest {}
message GetAreasResponse {
    repeated Area areas = 1;
}

// AssetEquipment
message AssetEquipment {
    int32 id = 1;
    string item = 2;
    string item_check = 3;
    string checking_method = 4;
    string tools = 5;
    string standard_area = 6;
    string photo = 7;
    int32 line_id = 8;
    int32 machine_id = 9;
}
message GetAssetEquipmentsRequest {}
message GetAssetEquipmentsResponse {
    repeated AssetEquipment assetequipments = 1;
}

// Contact
message Contact {
    int32 id = 1;
    string title = 2;
    string number = 3;
    string optime = 4;
    string opday = 5;
    string email = 6;
}
message GetContactsRequest {}
message GetContactsResponse {
    repeated Contact contacts = 1;
}

// Services
service MasterService {
    rpc GetAreas(GetAreasRequest) returns (GetAreasResponse) {};
    rpc GetAssetEquipments(GetAssetEquipmentsRequest) returns (GetAssetEquipmentsResponse) {};
    rpc GetContacts(GetContactsRequest) returns (GetContactsResponse) {};
}